--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,42 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 0;
+  /* padding: 0; */
+  /* width: 100vw; */
+  /* height: 100vh; */
+  /* padding-top: 10px; */
+}
+
+#root {
   width: 100vw;
   height: 100vh;
 }
 
-#root {
-  width: 100%;
-  height: 100%;
+.scoreBox {
+  display: flex;
+  padding-top: 20px;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  font-weight: 700;
+  font-size: 50px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.lvl {
+  font-size: 20px;
+  font-weight: normal;
 }
 
 .fullScreen {
-  width: 100%;
-  height: 100%;
-}
-
-.flexCenterTop {
-  display: flex;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  color: white;
-  font-size: 50px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
-  transform: translate(-50%, -50%);
-}
-canvas {
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
 }
