--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,50 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* padding: 0; */
-  /* width: 100vw; */
-  /* height: 100vh; */
-  /* padding-top: 10px; */
 }
 
 #root {
   width: 100vw;
   height: 100vh;
+}
+
+/*  Canvas */
+.fullScreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
+}
+
+/* 
+ * Game Container
+ */
+
+.gameContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.gameButton {
+  background: transparent;
+  padding: 9px 20px;
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  color: #f1b910;
+  outline: none;
+  border: 2px solid #f1b910;
+  border-radius: 15px;
+  transition: 0.5s all;
+  user-select: none;
+  cursor: pointer;
 }
 
 .scoreBox {
@@ -24,25 +56,9 @@ body {
   color: white;
   font-weight: 700;
   font-size: 50px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .lvl {
   font-size: 20px;
   font-weight: normal;
-}
-
-.fullScreen {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100vw;
-  height: 100vh;
-}
-
-.gameButton {
-  background: green;
-  padding: 7px;
-  border-radius: 15px;
 }
