--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,9 @@ body {
   font-size: 20px;
   font-weight: normal;
 }
+
+.speed {
+  font-size: 13px;
+  letter-spacing: 0.6px;
+  font-weight: 500;
+}
