--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,12 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
+  user-select: none;
 }
 .gameButton {
   background: transparent;
-  padding: 9px 20px;
+  padding: 7px 18px;
   font-size: 15px;
   font-weight: bold;
   letter-spacing: 0.5px;
@@ -42,9 +43,20 @@ body {
   outline: none;
   border: 2px solid #f1b910;
   border-radius: 15px;
-  transition: 0.5s all;
+  transition: 0.1s all;
   user-select: none;
   cursor: pointer;
+}
+
+.gameButton:disabled {
+  color: #918f87;
+  border: 2px solid #918f87;
+  cursor: initial;
+}
+
+.gameButton:hover:enabled {
+  border: 2px solid #ffffff;
+  color: #ffffff;
 }
 
 .scoreBox {
@@ -54,8 +66,9 @@ body {
   flex-direction: column;
   align-items: center;
   color: white;
-  font-weight: 700;
-  font-size: 50px;
+  letter-spacing: 0.4px;
+  font-weight: 800;
+  font-size: 55px;
 }
 
 .lvl {
@@ -67,4 +80,12 @@ body {
   font-size: 13px;
   letter-spacing: 0.6px;
   font-weight: 500;
+}
+
+.start {
+  font-size: 20px;
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
 }
