--- a/src/index.css
+++ b/src/index.css
@@ -59,33 +59,44 @@ body {
   color: #ffffff;
 }
 
-.scoreBox {
-  display: flex;
-  padding-top: 20px;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  color: white;
-  letter-spacing: 0.4px;
+.title {
   font-weight: 800;
-  font-size: 55px;
+  font-size: 35px;
+  padding-top: 100px;
+  letter-spacing: 0.4px;
+  color: #f1b910;
 }
 
 .lvl {
   font-size: 20px;
   font-weight: normal;
+  color: #ffffff;
+}
+.scoreBox {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.points {
+  font-weight: 800;
+  font-size: 55px;
+  padding-top: 20px;
+  letter-spacing: 0.4px;
+  color: white;
 }
 
 .speed {
   font-size: 13px;
+  color: white;
   letter-spacing: 0.6px;
   font-weight: 500;
 }
 
 .start {
-  font-size: 20px;
   position: absolute;
   left: 50%;
-  top: 30%;
+  top: 28%;
   transform: translate(-50%, -50%);
 }
