improved audio sound

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
 #root {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 /*  Canvas */
@@ -99,4 +100,72 @@ body {
   left: 50%;
   top: 28%;
   transform: translate(-50%, -50%);
+}
+
+/* popup */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 50px 0;
+  background: #1e1218;
+}
+
+.rainbowFont {
+  background: linear-gradient(268.3deg, #dd3f3f -9.19%, #ea1fee 121.45%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 38px;
+  line-height: 52px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-weight: bolder;
+}
+
+.flexCol {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  border: 2px solid #e550e7;
+  border-radius: 20px;
+  margin: 0 auto;
+  padding: 3px 7px;
+  gap: 10px;
+  justify-content: center;
+}
+
+label {
+  font-size: 13px;
+  font-weight: 600;
+  color: #ef68f1;
+}
+.inputName {
+  width: 100px;
+  background: transparent;
+  outline: none;
+  border: none;
+  font-size: 13px;
+  padding: 7px;
+  font-weight: 600;
+  color: #ef68f1;
+}
+::placeholder {
+  color: #fc5ae1;
+}
+
+.saveButton {
+  background: linear-gradient(268.3deg, #dd3f3f -9.19%, #ea1fee 121.45%);
+  border-radius: 10px;
+  font-size: 13px;
+  padding: 5px 7px;
+  outline: none;
+  cursor: pointer;
+  color: rgb(248, 248, 248);
+  border: none;
 }
